# relp-circuits

./: .gitignore  README.md  pyproject.toml
relp_circuits/: __init__.py  ablation.py  bake_html.py  baseline.py  circuit_tracer_export.py  clustering.py  dataset_acts.py  describe.py  edges.py  model.py  profiles.py  viz.py
relp_circuits/attribution/: __init__.py  common.py  ig.py  relp.py
relp_circuits/sglang_harvester/: __init__.py  _capture.py  olmo2.py
relp_circuits/tasks/: __init__.py  base.py  blimp.py  eval_awareness.py  eval_awareness_flat.py  eval_awareness_paired.py  eval_boundaries.py  multihop.py  sva.py
scripts/: collect_acts.py  collect_acts_sglang.py  compute_baseline.py  download_dolma_shards.py  query_acts.py  render_circuit.py  run_adag.py  run_attribution.py  run_bake_circuit_html.py  run_clja_edges.py  run_describe.py
slurm/: attribution.sbatch  collect_acts.sbatch  collect_acts_sglang.sbatch  common.sh  compute_baseline.sbatch  diag.sbatch  download_dolma.sbatch  download_model.sbatch  dump_pairs.sbatch  dump_prompts.sbatch  finish_boundaries_demo.sbatch  inspect_circuit.sbatch  render_circuit.sbatch  run_adag.sbatch  run_boundaries_demo.sbatch  run_clja_edges.sbatch  run_describe.sbatch  setup.sbatch  setup_sglang.sbatch  show_circuit.sbatch
tests/: test_smoke.py
viz_folders/boundaries-demo-20260512-055526/: data.js  index.html
